@startuml
skinparam classAttributeIconSize 0
hide circle
skinparam linetype ortho

class mtlab1 {
  +{static} main(args: String[]): void
}

class GameBoard {
  - board: char[][]
  - EMPTY_CELL: char
  - SIZE: int
  --
  + GameBoard()
  + printBoard(): void
  + updateCell(row: int, col: int, symbol: char): boolean
  + checkWin(symbol: char): boolean
  + isFull(): boolean
}

class Player {
  - name: String
  - symbol: char
  - scanner: Scanner
  --
  + Player(name: String, symbol: char, scanner: Scanner)
  + getName(): String
  + getSymbol(): char
  + makeMove(message: String): int
  + printInfo(): void
}

' Связи между классами
mtlab1 ..> GameBoard : создает и использует
mtlab1 ..> Player : создает и использует
Player --> "1" java.util.Scanner : использует для ввода

@enduml